--- a/timer.css
+++ b/timer.css
@@ -1,13 +1,14 @@
 .timer{
   position:fixed;
-  top: 0%;
-  left:-14%;
+  top: 15%;
+  left:-7%;
   background:white;
-  width:15%;
-  height:100%;
+  width:8%;
+  height:70%;
   z-index:10;
   margin: auto;
-  box-shadow: 2px 2px 5px #757575;
+  border-radius: 20px;
+  box-shadow: 0 0 10px #757575;
 }
 .timer:hover {
   left:0;
@@ -15,8 +16,8 @@
 
 .circle {
   padding:3px;
-  height: 110px;
-  width: 110px;
+  height: 70px;
+  width: 70px;
   /* border: 1px solid black; */
   border-radius: 50%;
   margin-bottom: 15px;
